k8s/manifests/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: ghcr.io/navidrome/navidrome:0.63.2
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-config
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
