k8s/manifests/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
    - port: 4533
      targetPort: 4533
