k8s/manifests/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: zerossl-cloudflare-dns01
  name: navidrome
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.internal.chaldea.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
  tls:
    - hosts:
        - navidrome.internal.chaldea.dev
      secretName: navidrome-tls
